--- a/BooksApi/appsettings.json
+++ b/BooksApi/appsettings.json
@@ -1,7 +1,8 @@
 {
   "BookstoreDatabaseSettings": {
     "BooksCollectionName": "Books",
-    "ConnectionString": "mongodb://localhost:27017",
+    //"ConnectionString": "mongodb+srv://PFServerAdmin:1nf0M%40t1cs%40987@127.0.0.1:27017/?authSource=admin&compressors=disabled&gssapiServiceName=mongodb",
+    "ConnectionString": "mongodb+srv://admin:welcome123@bookscluster.6b7c2.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
     "DatabaseName": "BookstoreDb"
   },
   "Logging": {
