--- a/BooksApi/appsettings.json
+++ b/BooksApi/appsettings.json
@@ -1,8 +1,8 @@
 {
   "BookstoreDatabaseSettings": {
     "BooksCollectionName": "Books",
-    //"ConnectionString": "mongodb://PFServerAdmin:1nf0M%40t1cs%40987@localhost:27017/?authSource=admin",
-    "ConnectionString": "mongodb+srv://admin:welcome123@bookscluster.6b7c2.mongodb.net/admin?retryWrites=true&w=majority",
+   
+    "ConnectionString": "<Add mongodb connection string here",
     "DatabaseName": "BookstoreDb"
   },
   "Logging": {
